fixed modal not centered, credits modal added

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -99,20 +99,17 @@ header{
 
 
 .my-modal-body{
-     position: absolute;
+     position: relative;
      width: 26%;
-     min-height: 40%;
+     min-height: 60%;
      max-height: 65%;
      border-radius:2%;
      background-color: rgb(10, 10, 10);
-     overflow: hidden;
 }
 
 .modal-title{
-     position: relative;
      display: flex;
      justify-content: space-between;
-     align-items: flex-end !important;
      padding: 4%;
 }
 
@@ -121,10 +118,14 @@ header{
 }
 
 
+.links{
+     position: absolute;
+     bottom: 0%;
+}
+
 .exit-btn{
      background-color: transparent;
      border: 0;
-
 }
 
 .exit-btn i{
@@ -202,8 +203,8 @@ header{
           align-items: flex-end;
      }
      .my-modal-body{
-          width: 100%;
-          height: 100%;
+          min-width: 100%;
+          min-height: 100%;
           border-radius: 0;
      }
 
